# osmose-python

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
data/examples/: osm_all-parameters.csv  osm_param-fishing.csv  osm_param-grid.csv  osm_param-ltl.csv  osm_param-movement.csv  osm_param-output.csv  osm_param-predation.csv  osm_param-species.csv
docs/plans/: 2026-02-21-osmose-python-port-design.md  2026-02-21-osmose-python-port-plan.md  2026-02-22-phase2-implementation-plan.md  2026-02-22-phase2-ui-wiring-design.md  2026-02-23-phase3-complete-gaps-design.md  2026-02-23-phase3-implementation-plan.md  2026-02-23-phase4-enhancements-plan.md  2026-02-23-pill-list-refactoring-plan.md
osmose/: __init__.py  logging.py  results.py  runner.py  scenarios.py
osmose/calibration/: __init__.py  objectives.py  problem.py  sensitivity.py  surrogate.py
tests/: test_app_structure.py  test_calibration_problem.py  test_config_reader.py  test_config_writer.py  test_integration.py  test_logging.py  test_objectives.py  test_param_form.py  test_registry.py  test_results.py  test_roundtrip.py  test_runner.py  test_scenarios.py  test_schema.py  test_schema_all.py  test_schema_species.py  test_sensitivity.py  test_state.py  test_surrogate.py  test_sync_config_pages.py  test_sync_setup.py  test_ui_advanced_io.py  test_ui_calibration.py  test_ui_calibration_handlers.py  test_ui_grid.py  test_ui_results.py  test_ui_run.py  test_ui_scenarios.py
ui/: charts.py  state.py  styles.py  theme.py
www/: osmose.css
(+29 files in other folders)
